--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,12 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.12.4"
-version = "0.2.30"
+version = "0.2.31"
 
 [project.license]
 file = "LICENSE.txt"
 
 [project.urls]
+Documentation = "https://pypi.org/project/datahold"
 Download = "https://pypi.org/project/datahold/#files"
 Source = "https://github.com/johannes-programming/datahold"
