--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.12.4"
-version = "0.2.34"
+version = "{preset}+v1"
 
 [project.license]
 file = "LICENSE.txt"
