--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
     { email = "johannes-programming@mailfence.com", name = "Johannes" },
 ]
 classifiers = [
+    "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
@@ -20,7 +21,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.12.4"
-version = "0.4.2"
+version = "0.4.3"
 
 [project.license]
 file = "LICENSE.txt"
