--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,15 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
 ]
-dependencies = []
+dependencies = [
+    "scaevola>=1.0",
+]
 description = "datahold"
 keywords = []
 name = "datahold"
 readme = "README.rst"
-requires-python = ">=3.12.4"
-version = "1.1.0"
+requires-python = ">=3.11"
+version = "1.1.1"
 
 [project.license]
 file = "LICENSE.txt"
