--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
+    "protectedclasses>=1.0",
     "scaevola>=1.0",
 ]
 description = "datahold"
@@ -24,7 +25,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.1.3"
+version = "1.1.4"
 
 [project.license]
 file = "LICENSE.txt"
