--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
-    "protectedclasses>=1.0",
+    "datarepr>=0.0.4",
     "scaevola>=1.0",
 ]
 description = "datahold"
@@ -25,7 +25,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.1.4"
+version = "1.1.5"
 
 [project.license]
 file = "LICENSE.txt"
@@ -33,4 +33,6 @@ file = "LICENSE.txt"
 [project.urls]
 Documentation = "https://pypi.org/project/datahold"
 Download = "https://pypi.org/project/datahold/#files"
+Index = "https://pypi.org/project/datahold/"
 Source = "https://github.com/johannes-programming/datahold"
+Website = "http://datahold.johannes-programming.online"
