--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.1.7+local"
+version = "1.1.7+local.1"
 
 [project.license]
 file = "LICENSE.txt"
