--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,17 +17,19 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
+    "Typing :: Typed",
 ]
 dependencies = [
     "datarepr>=1.0",
     "scaevola>=1.0.11",
+    "unhash>=1.0",
 ]
-description = "Wrap common mutable datastructures for inheritance with modification."
+description = "This project wraps common mutable datastructures for inheritance with modification."
 keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.1.8"
+version = "1.1.8+local"
 
 [project.license]
 file = "LICENSE.txt"
