--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 
 [project]
 authors = [
-    { email = "johannes-programming@mailfence.com", name = "Johannes" },
+    { email = "johannes.programming@gmail.com", name = "Johannes" },
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -29,14 +29,13 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.1.9"
+version = "1.1.10"
 
 [project.license]
 file = "LICENSE.txt"
 
 [project.urls]
-Documentation = "https://pypi.org/project/datahold"
 Download = "https://pypi.org/project/datahold/#files"
 Index = "https://pypi.org/project/datahold/"
-Source = "https://github.com/johannes-programming/datahold"
-Website = "http://datahold.johannes-programming.online"
+Source = "https://github.com/johannes-programming/datahold/"
+Website = "http://datahold.johannes-programming.online/"
