--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ requires = [
 [project]
 authors = [
     { email = "johannes.programming@gmail.com", name = "Johannes" },
-    { email = "johannes-programming@mailfence.com", name = "Johannes" },
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -36,8 +35,7 @@ version = "1.1.9+local"
 file = "LICENSE.txt"
 
 [project.urls]
-Documentation = "https://pypi.org/project/datahold"
 Download = "https://pypi.org/project/datahold/#files"
 Index = "https://pypi.org/project/datahold/"
-Source = "https://github.com/johannes-programming/datahold"
-Website = "http://datahold.johannes-programming.online"
+Source = "https://github.com/johannes-programming/datahold/"
+Website = "http://datahold.johannes-programming.online/"
