--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.1.10+local"
+version = "1.1.11"
 
 [project.license]
 file = "LICENSE.txt"
