--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 dependencies = [
     "datarepr>=1.0,<2",
     "scaevola>=1.0.11,<2",
+    "setdoc>=1.2,<2",
     "unhash>=1.0,<2",
 ]
 description = "This project wraps common mutable datastructures for inheritance with modification."
@@ -29,7 +30,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "1.1.13"
+version = "1.2.0"
 
 [project.license]
 file = "LICENSE.txt"
