--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.0.5+inherit"
+version = "2.0.5+generic"
 
 [project.license]
 file = "LICENSE.txt"
