--- a/src/datahold/_utils/cfg.toml
+++ b/src/datahold/_utils/cfg.toml
@@ -1,13 +1,11 @@
-[datafuncs]
-Dict = [
+[frozen]
+dict = [
     "__contains__",
-    "__delitem__",
     "__eq__",
     "__format__",
     "__ge__",
     "__getitem__",
     "__gt__",
-    "__ior__",
     "__iter__",
     "__le__",
     "__len__",
@@ -16,30 +14,21 @@ Dict = [
     "__repr__",
     "__reversed__",
     "__ror__",
-    "__setitem__",
     "__str__",
-    "clear",
     "copy",
     "get",
     "items",
     "keys",
-    "pop",
-    "popitem",
-    "setdefault",
-    "update",
     "values",
 ]
-List = [
+list = [
     "__add__",
     "__contains__",
-    "__delitem__",
     "__eq__",
     "__format__",
     "__ge__",
     "__getitem__",
     "__gt__",
-    "__iadd__",
-    "__imul__",
     "__iter__",
     "__le__",
     "__len__",
@@ -48,32 +37,19 @@ List = [
     "__repr__",
     "__reversed__",
     "__rmul__",
-    "__setitem__",
     "__str__",
-    "append",
-    "clear",
     "copy",
     "count",
-    "extend",
     "index",
-    "insert",
-    "pop",
-    "remove",
-    "reverse",
-    "sort",
 ]
-Set = [
+set = [
     "__and__",
     "__contains__",
     "__eq__",
     "__format__",
     "__ge__",
     "__gt__",
-    "__iand__",
-    "__ior__",
-    "__isub__",
     "__iter__",
-    "__ixor__",
     "__le__",
     "__len__",
     "__lt__",
@@ -86,21 +62,52 @@ Set = [
     "__str__",
     "__sub__",
     "__xor__",
-    "add",
-    "clear",
     "copy",
     "difference",
-    "difference_update",
-    "discard",
     "intersection",
-    "intersection_update",
     "isdisjoint",
     "issubset",
     "issuperset",
+    "symmetric_difference",
+    "union",
+]
+[unfrozen]
+dict = [
+    "__delitem__",
+    "__ior__",
+    "__setitem__",
+    "clear",
+    "pop",
+    "popitem",
+    "setdefault",
+    "update",
+]
+list = [
+    "__delitem__",
+    "__iadd__",
+    "__imul__",
+    "__setitem__",
+    "append",
+    "clear",
+    "extend",
+    "insert",
     "pop",
     "remove",
-    "symmetric_difference",
+    "reverse",
+    "sort",
+]
+set = [
+    "__iand__",
+    "__ior__",
+    "__isub__",
+    "__ixor__",
+    "add",
+    "clear",
+    "difference_update",
+    "discard",
+    "intersection_update",
+    "pop",
+    "remove",
     "symmetric_difference_update",
-    "union",
     "update",
 ]
