--- a/src/datahold/_utils/cfg.toml
+++ b/src/datahold/_utils/cfg.toml
@@ -6,6 +6,7 @@ dict = [
     "__ge__",
     "__getitem__",
     "__gt__",
+    "__hash__",
     "__iter__",
     "__le__",
     "__len__",
@@ -29,6 +30,7 @@ list = [
     "__ge__",
     "__getitem__",
     "__gt__",
+    "__hash__",
     "__iter__",
     "__le__",
     "__len__",
@@ -49,6 +51,7 @@ set = [
     "__format__",
     "__ge__",
     "__gt__",
+    "__hash__",
     "__iter__",
     "__le__",
     "__len__",
