--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.2.1"
+version = "2.3.0.dev0"
 
 [project.license]
 file = "LICENSE.txt"
