--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,13 @@ dependencies = [
     "frozendict>=2.4.6,<3",
     "scaevola>=1.0.11,<2",
     "setdoc>=1.2.4,<2",
-    "unhash>=1.0,<2",
 ]
 description = "This project wraps common mutable datastructures for inheritance with modification."
 keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "3.0.0+no.okay"
+version = "3.0.0+no.unhash"
 
 [project.license]
 file = "LICENSE.txt"
