--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "3.0.0+classes"
+version = "3.0.0+test"
 
 [project.license]
 file = "LICENSE.txt"
