--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-    "setuptools>=61.0",
+    "setuptools>=64.0",
 ]
 
 [project]
@@ -9,7 +9,7 @@ authors = [
     { email = "johannes.programming@gmail.com", name = "Johannes" },
 ]
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
@@ -20,18 +20,19 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
+    "cmp3>=0.5.1,<1",
+    "copyable>=0.0.0.dev2,<1",
     "datarepr>=1.0,<2",
     "frozendict>=2.4.6,<3",
     "scaevola>=1.0.11,<2",
     "setdoc>=1.2.4,<2",
-    "unhash>=1.0,<2",
 ]
 description = "This project wraps common mutable datastructures for inheritance with modification."
 keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.2.1"
+version = "2.3.0a1"
 
 [project.license]
 file = "LICENSE.txt"
