--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 ]
 dependencies = [
     "cmp3>=0.5.1,<1",
+    "copyable>=0.0.0.dev2,<1",
     "datarepr>=1.0,<2",
     "frozendict>=2.4.6,<3",
     "scaevola>=1.0.11,<2",
