--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-    "setuptools>=61.0",
+    "setuptools>=64.0",
 ]
 
 [project]
@@ -24,6 +24,7 @@ dependencies = [
     "copyable>=0.0.0.dev2,<1",
     "datarepr>=1.0,<2",
     "frozendict>=2.4.6,<3",
+    "okayhold>=0.1,<1",
     "scaevola>=1.0.11,<2",
     "setdoc>=1.2.4,<2",
 ]
@@ -32,7 +33,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.3.0.dev4+local"
+version = "2.3.0a0"
 
 [project.license]
 file = "LICENSE.txt"
