--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "copyable>=0.0.0.dev2,<1",
     "datarepr>=1.0,<2",
     "frozendict>=2.4.6,<3",
+    "okayhold>=0.2.1,<1",
     "scaevola>=1.0.11,<2",
     "setdoc>=1.2.4,<2",
 ]
@@ -32,7 +33,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.3.0a1"
+version = "2.3.0a2+okay.dict"
 
 [project.license]
 file = "LICENSE.txt"
