--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,9 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "cmp3>=0.5.1,<1",
     "copyable>=0.0.0.dev2,<1",
-    "datarepr>=1.0,<2",
     "frozendict>=2.4.6,<3",
     "okayhold>=0.2.1,<1",
-    "scaevola>=1.0.11,<2",
     "setdoc>=1.2.4,<2",
 ]
 description = "This project wraps common mutable datastructures for inheritance with modification."
@@ -33,7 +30,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.3.0a2+okay.set"
+version = "2.3.0a2+okay.object"
 
 [project.license]
 file = "LICENSE.txt"
