--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 dependencies = [
     "copyable>=0.0.0.dev2,<1",
     "frozendict>=2.4.6,<3",
-    "okayhold>=0.2.1,<1",
+    "okayhold>=0.3,<1",
     "setdoc>=1.2.4,<2",
 ]
 description = "This project wraps common mutable datastructures for inheritance with modification."
@@ -30,7 +30,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.3.0a2+okay.object"
+version = "2.3.0a2+okay.test"
 
 [project.license]
 file = "LICENSE.txt"
