--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.3.0a2+okay.copy"
+version = "2.3.0a2"
 
 [project.license]
 file = "LICENSE.txt"
