--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 ]
 dependencies = [
     "cmp3>=0.5.1,<1",
-    "copyable>=0.0.0.dev2,<1",
+    "copyable>=1.0,<2",
     "datarepr>=1.0,<2",
     "frozendict>=2.4.6,<3",
     "scaevola>=1.0.11,<2",
@@ -32,7 +32,7 @@ keywords = []
 name = "datahold"
 readme = "README.rst"
 requires-python = ">=3.11"
-version = "2.3.0a1"
+version = "2.3.0a3"
 
 [project.license]
 file = "LICENSE.txt"
